# Conformal_Prediction

./: .flake8  .pdm-python  LICENSE  README.md  conformal_env.yml  pyproject.toml
notes/: cites.txt  thoughts.txt
paper/fig/: New Microsoft PowerPoint Presentation.pptx
src/: .RData  .Rhistory  Comparisson_CV_Split_Setsize.ipynb  PERMAD_reading.R  PERMAD_train_encoder.ipynb  best_autoencoder.pt  beta distribution.ipynb  conformal_martingale.ipynb  conformal_synthetic_data.ipynb  experiments.py  front_book.ipynb  test_script_classification_I.ipynb  test_script_regression_I.ipynb
src/conformal_methods/: byhand_evaluation.py  evaluation.py  mapie_evaluation.py
src/data/: PERMAD_data_reader.py  data_generation.py
src/data/DryBeanDataset/: Dry_Bean_Dataset.txt
src/data/PERMAD/: PERMAD_Kohorte1+2_ct.RData  cohort.RData  data.RData  features.RData  labs.RData  sample_id.RData  time.RData  time_ct.RData  time_id.RData
src/models/: autoencoder.py  binaray_image.py  modelwrapper.py  myMLP.py  skorchMLP.py  traditional_models.py
src/models/meta_parameters/: autoencoder_param_healthy - Copy.pt  autoencoder_param_healthy.pt  autoencoder_param_sick - Copy.pt  autoencoder_param_sick.pt  meta_param_adaBoost.json  meta_param_random_forest.json  model_weights.pth  model_weights_beans.pth
src/results/artificial/: observation.txt
src/results/artificial/200dp/: Cv_Split_Evaluation_0.csv  Cv_Split_Evaluation_1.csv  Cv_Split_Evaluation_2.csv  Cv_Split_Evaluation_3.csv  read_me.txt
src/results/artificial/5000dp/: Cv_Split_Evaluation_1.csv  Cv_Split_Evaluation_2.csv  (+4 more)
(+11 files in other folders)
