[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend

[tool.setuptools]
py-modules = []

[project]
name = "conformal_prediction"
version = "0.1.0"
description = "Conformal prediction project for the University of Ulm"
authors = [
    {name = "Michel Lutz", email = "michel.lutz@outlook.com"},
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "pyinstaller>=5.7.0",
    "pytest>=7.2.1",
    "pytest-env>=0.8.1",
    "black>=22.12.0",
]

dependencies = [
    "pandas>=1.5.2",
    "numpy",
    "torch",
    "scikit-learn",
    "matplotlib",
    "skorch",
    "mapie",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}



